z-index corrections

--- a/css/components/mobile-menu.css
+++ b/css/components/mobile-menu.css
@@ -8,7 +8,7 @@
     width: 320px;
     display: flex;
     flex-direction: column;
-    z-index: 2;
+    z-index: 3;
     overflow: scroll;
     box-shadow: -2px 0 20px rgba(0, 0, 0, 0.1);
 }
@@ -19,7 +19,7 @@
     right: 0;
     bottom: 0;
     left: 0;
-    z-index: 1;
+    z-index: 2;
 }
 
 #mobile-nav .close {
